2003-11-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: More checks for X version for system-xfree86.
	  this will find 4.3.99 cvs without having to run -version.

2003-11-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Change the thread test to use grep -a, so as not to
	  depend on nm from the dev tools.

2003-11-14  Michael G Schwern <schwern@pobox.com>

	* Command.pm: Adding insufficient argument checks to cp and mv
	(from Paul Gaborit, see 841381).  Tested.

2003-11-14  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Fixed typo in my previous change.

2003-11-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Small tweak to UpdatePOD in case two files are
	being catted together
	* PkgVersion.pm: Revise get_perl_dir_arch() and the places where it
	is used, correcting some errors in UpdatePOD in case of Type: perl,
	and guaranteeing that the correct perl command is used when needed.

2003-11-13  Max Horn  <max@quendi.de>

	* Services.pm: Improve the caching of version_cmp in Fink::Services; 
	some cleanup (Patch #841031).

2003-11-13  Justin F. Hallett  <thesin@users.sourceforge.net

	* PkgVersion.pm: Fix UpdatePOD when using a Custom build/installscript
	as it may not be installing into the normal $perlarch dir.

2003-11-13  Michael G Schwern <schwern@pobox.com>

	* Command.pm: Make sure functions fail quietly and with the
	proper return value and errno setting.  Tested.

2003-11-13  Michael G Schwern <schwern@pobox.com>

	* Command.pm: Created to replace execute() of common shell commands
	like rm -rf and mkdir -p.  Tested.

2003-11-12  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Clarified "unable to parse..." warning message.

2003-11-12  Michael G Schwern <schwern@pobox.com>

	* Package.pm: Does not use execute() so don't import it from
	Fink::Services.

2003-11-12  Max Horn  <max@quendi.de>

	* Services.pm: Simplified code a bit.
